crates/zdk-cli/tests/snapshots/resources_cli__tickets_help.snap
---
source: crates/zdk-cli/tests/resources_cli.rs
expression: "String::from_utf8_lossy(&out.stdout)"
---
Tickets: list, get, show, create, update, reply, assign, solve, delete

Usage: zdk tickets [OPTIONS] <COMMAND>

Commands:
  list                List tickets (cursor pages); any filter compiles to a search query (offset,
                      capped at 1,000 results — add --all to walk search/export instead)
  get                 Show one ticket (--with-comments embeds the conversation)
  show                Render one ticket as a conversation transcript (JSON: ticket with comments
                      embedded)
  count               Count tickets (with filters: the search count)
  recent              Tickets recently viewed by the current agent
  create              Create a ticket from flags, --file or stdin
  update              Update fields, tags and custom fields
  reply               Add a public reply (--internal for a private note)
  note                Add an internal note (--public to make it visible to the requester)
  solve               Set status solved, optionally with a comment
  close               Set status closed, optionally with a comment
  reopen              Set status open, optionally with a comment
  assign              Assign to an agent (me, an id or an email) and optionally a group
  delete              Soft-delete a ticket (restorable for 30 days); asks unless --yes
  restore             Restore a soft-deleted ticket
  permanently-delete  Permanently delete a soft-deleted ticket (irreversible); asks unless --yes

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global options:
  -p, --profile <NAME>
          Profile (Zendesk instance) to target
          
          [env: ZENDESK_PROFILE=]

      --subdomain <SUB>
          Override the subdomain for this call (the `acme` in acme.zendesk.com)

  -o, --output <FORMAT>
          Output format (default: table on a terminal, json when piped)
          
          [possible values: table, json, ndjson, csv, tsv, yaml, raw]

      --fields <A,B,C>
          Keep only these fields (dot paths, comma-separated), e.g. id,subject,assignee.name

      --exclude <A,B>
          Drop these fields (dot paths, comma-separated)

      --compact
          Single-line JSON

      --jq <EXPR>
          Post-process with an embedded jq-compatible filter

      --all
          Auto-paginate to completion

      --limit <N>
          Stop after N records

      --page-size <N>
          Records per page (1-100)

      --sideload <A,B>
          Request sideloads, e.g. users,groups,comment_count

      --dry-run
          Print the request that would be sent and consume no quota

  -y, --yes
          Skip destructive-action confirmation

      --idempotency-key <KEY>
          Explicit Idempotency-Key for writes (auto-generated by default)

      --rate-limit-strategy <STRATEGY>
          What to do when a rate-limit budget is exhausted

          Possible values:
          - wait:  Sleep until the budget refills (default)
          - fail:  Exit 7 as soon as a budget is exhausted
          - burst: Skip the local governor; rely on 429 handling

      --max-concurrency <N>
          In-flight request ceiling

      --timeout <SECS>
          Per-request timeout in seconds

      --retries <N>
          Maximum attempts per request (overrides [retry].max_attempts)

  -q, --quiet
          Suppress non-error output on stderr (warnings, progress)

  -v, --verbose...
          Increase verbosity (-v info, -vv debug, -vvv trace with redacted request/response logs)

      --no-color
          Disable colour (NO_COLOR is also honoured)

      --audit-log <PATH>
          Append a structured NDJSON record of every API call to this file

      --config <PATH>
          Alternative config file (also ZENDESK_CONFIG)

      --credential-store <STORE>
          Where credentials are kept

          Possible values:
          - auto:    OS keyring when available, else the encrypted file
          - keyring
          - file
          - env:     Read-only: ZENDESK_ACCESS_TOKEN / ZENDESK_EMAIL + ZENDESK_API_TOKEN
          - none:    In-memory only (tests)

      --checkpoint <PATH>
          Write pagination progress to this file and resume from it
