crates/zdk-cli/tests/snapshots/resources_cli__tickets_list_help.snap
---
source: crates/zdk-cli/tests/resources_cli.rs
expression: "String::from_utf8_lossy(&out.stdout)"
---
List tickets (cursor pages); any filter compiles to a search query (offset, capped at 1,000 results
— add --all to walk search/export instead)

Usage: zdk tickets list [OPTIONS]

Options:
      --external-id <ID>
          External id (server-side filter; a search term when combined with other filters)

      --sort-by <FIELD>
          Sort field: updated_at, created_at, id, status (search: priority, ticket_type too)

      --sort-order <ORDER>
          Sort order: asc or desc

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Filters (any of these compiles to a search query):
      --status <STATUS>
          Status (comma-separated or repeated): new, open, pending, hold, solved, closed

      --assignee <ME|ID|EMAIL>
          Assignee: me, a user id, or an email

      --requester <ME|ID|EMAIL>
          Requester: me, a user id, or an email

      --group-id <ID>
          Group id

      --organization-id <ID>
          Organization id

      --brand-id <ID>
          Brand id

      --form-id <ID>
          Ticket form id

      --tag <TAG>
          Tag (repeatable; every tag must be present)

      --priority <PRIORITY>
          Priority: low, normal, high, urgent

      --type <TYPE>
          Type: problem, incident, question, task

      --created-after <TIME>
          Created after (RFC 3339, YYYY-MM-DD, 24h, "2 hours ago", yesterday)

      --created-before <TIME>
          Created before

      --updated-after <TIME>
          Updated after

      --updated-before <TIME>
          Updated before

      --custom-field <ID=VALUE>
          Custom field filter <field id>=<value> (repeatable)

      --unassigned
          No assignee (assignee:none)

      --older-than <DURATION>
          Created earlier than this long ago, e.g. 24h, 7d (created<…)

      --awaiting-customer
          Waiting on the customer (status:pending)

Global options:
  -p, --profile <NAME>
          Profile (Zendesk instance) to target
          
          [env: ZENDESK_PROFILE=]

      --subdomain <SUB>
          Override the subdomain for this call (the `acme` in acme.zendesk.com)

  -o, --output <FORMAT>
          Output format (default: table on a terminal, json when piped)
          
          [possible values: table, json, ndjson, csv, tsv, yaml, raw]

      --fields <A,B,C>
          Keep only these fields (dot paths, comma-separated), e.g. id,subject,assignee.name

      --exclude <A,B>
          Drop these fields (dot paths, comma-separated)

      --compact
          Single-line JSON

      --jq <EXPR>
          Post-process with an embedded jq-compatible filter

      --all
          Auto-paginate to completion

      --limit <N>
          Stop after N records

      --page-size <N>
          Records per page (1-100)

      --sideload <A,B>
          Request sideloads, e.g. users,groups,comment_count

      --dry-run
          Print the request that would be sent and consume no quota

  -y, --yes
          Skip destructive-action confirmation

      --idempotency-key <KEY>
          Explicit Idempotency-Key for writes (auto-generated by default)

      --rate-limit-strategy <STRATEGY>
          What to do when a rate-limit budget is exhausted

          Possible values:
          - wait:  Sleep until the budget refills (default)
          - fail:  Exit 7 as soon as a budget is exhausted
          - burst: Skip the local governor; rely on 429 handling

      --max-concurrency <N>
          In-flight request ceiling

      --timeout <SECS>
          Per-request timeout in seconds

      --retries <N>
          Maximum attempts per request (overrides [retry].max_attempts)

  -q, --quiet
          Suppress non-error output on stderr (warnings, progress)

  -v, --verbose...
          Increase verbosity (-v info, -vv debug, -vvv trace with redacted request/response logs)

      --no-color
          Disable colour (NO_COLOR is also honoured)

      --audit-log <PATH>
          Append a structured NDJSON record of every API call to this file

      --config <PATH>
          Alternative config file (also ZENDESK_CONFIG)

      --credential-store <STORE>
          Where credentials are kept

          Possible values:
          - auto:    OS keyring when available, else the encrypted file
          - keyring
          - file
          - env:     Read-only: ZENDESK_ACCESS_TOKEN / ZENDESK_EMAIL + ZENDESK_API_TOKEN
          - none:    In-memory only (tests)

      --checkpoint <PATH>
          Write pagination progress to this file and resume from it
